kustomize/base/cluster/envoy-gateway/lb-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-lb
  namespace: envoy-gateway-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: eg
    gateway.envoyproxy.io/owning-gateway-namespace: default
  ports:
    - name: http
      port: 80
      targetPort: 10080
