kustomize/base/cluster/envoy-gateway/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: backend-api
spec:
    parentRefs:
        - name: eg
          sectionName: https
    hostnames:
        - "api.homelab.local"
    rules:
        - backendRefs:
              - group: ""
                kind: Service
                name: backend
                port: 3000
                weight: 1
          matches:
              - path:
                    type: PathPrefix
                    value: /
---
# Redirect HTTP to HTTPS
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: http-to-https-redirect
spec:
    parentRefs:
        - name: eg
          sectionName: http
    hostnames:
        - "api.homelab.local"
    rules:
        - filters:
              - type: RequestRedirect
                requestRedirect:
                    scheme: https
                    statusCode: 301
